--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,14 +26,11 @@
         android:hint="Password"
         android:id="@+id/psd"
         android:textAlignment="viewStart"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="161dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:editable="true"
-        style="@style/Widget.AppCompat.EditText" />
+        style="@style/Widget.AppCompat.EditText"
+        android:layout_below="@+id/usr"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="16dp" />
 
     <EditText
         android:layout_width="wrap_content"
