--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/Background"
+    android:background="@drawable/background"
     tools:context="com.css.cssapp.LoginActivity">
 
     <TextView
@@ -58,26 +58,26 @@
         android:id="@+id/register_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/login_button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="73dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/login_button"
         android:background="@android:color/holo_blue_dark"
         android:text="Register"
         android:visibility="visible" />
+
+
 
     <Button
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="53dp"
         android:background="@android:color/holo_blue_dark"
         android:text="LOGIN"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:layout_marginTop="69dp"
+        android:layout_alignTop="@+id/psd"
+        android:layout_centerHorizontal="true" />
+
+
 
     <ImageView
         android:id="@+id/imageView"
