--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/background"
     tools:context="com.css.cssapp.MainActivity">
 
     <Button
@@ -17,7 +18,7 @@
         android:id="@+id/menuLoginButton"
         android:background="@android:color/holo_blue_dark"
         android:layout_marginTop="126dp"
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/BITELL"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
 
@@ -33,12 +34,13 @@
         android:layout_alignParentEnd="true" />
 
     <TextView
-        android:text="CSS App"
+        android:id="@+id/BITELL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="83dp"
-        android:id="@+id/textView2"
-        android:textSize="36sp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="83dp"
+        android:text="BITELL"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        android:visibility="visible" />
 </RelativeLayout>
