--- a/app/src/main/res/layout/tinder_card_view.xml
+++ b/app/src/main/res/layout/tinder_card_view.xml
@@ -11,9 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
-        android:orientation="vertical"
-        app:cardCornerRadius="7dp"
-        app:cardElevation="4dp">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/profileImageView"
