--- a/app/src/main/res/layout/activity_project_form.xml
+++ b/app/src/main/res/layout/activity_project_form.xml
@@ -1,68 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="com.css.cssapp.ProjectForm">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
-        android:id="@+id/appBarLayout">
+        android:id="@+id/appBarLayout"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="54dp">
 
     </android.support.design.widget.AppBarLayout>
-
-    <include
-        android:id="@+id/include"
-        layout="@layout/content_project_form"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
     <Button
         android:id="@+id/submitProject"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:layout_gravity="top|center_horizontal"
-        android:layout_marginBottom="26dp"
         android:text="Submit"
         app:layout_anchor="@+id/include"
-        app:layout_anchorGravity="bottom|center_horizontal" />
+        app:layout_anchorGravity="bottom|center_horizontal"
+        android:layout_marginTop="54dp"
+        android:layout_below="@+id/textInputLayout2"
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:id="@+id/projectName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/submitProject"
-        android:layout_below="@+id/appBarLayout"
-        android:layout_marginTop="58dp"
         android:ems="10"
         android:hint="Name"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:layout_marginTop="89dp"
+        android:layout_below="@+id/textView4"
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:id="@+id/projectDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/projectName"
-        android:layout_below="@+id/projectName"
-        android:layout_marginTop="37dp"
         android:ems="10"
         android:hint="Description"
-        android:inputType="textMultiLine" />
+        android:inputType="text"
+        android:textAlignment="center"
+        android:layout_below="@+id/projectName"
+        android:layout_alignStart="@+id/projectName"
+        android:layout_marginTop="14dp" />
 
     <EditText
         android:id="@+id/numPeople"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="27dp"
         android:ems="10"
         android:hint="People on project"
         android:inputType="number"
+        android:textAlignment="center"
         android:layout_below="@+id/projectDescription"
-        android:layout_alignStart="@+id/projectDescription" />
+        android:layout_alignStart="@+id/projectDescription"
+        android:layout_marginTop="21dp" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="91dp"
+            android:fontFamily="sans-serif"
+            android:text="Post Your Project"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textSize="36sp"
+            android:textStyle="bold"
+            android:layout_alignParentTop="true"
+            android:layout_alignEnd="@+id/projectName"
+            android:layout_marginTop="19dp" />
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/submitProject"
+        android:layout_below="@+id/numPeople"
+        android:layout_marginTop="65dp"
+        android:id="@+id/textInputLayout2">
+
+    </android.support.design.widget.TextInputLayout>
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView4"
+        android:layout_marginTop="21dp"
+        android:text="To display your project idea, start by entering your project name, description, the number of people required for your project, and the project leader."
+        android:textAlignment="center" />
+
+    <EditText
+        android:id="@+id/projectLeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Project Leader"
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:layout_above="@+id/submitProject"
+        android:layout_alignStart="@+id/numPeople" />
+
+    </RelativeLayout>
+
+</ScrollView>
