--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,23 +34,24 @@
         style="@style/Widget.AppCompat.EditText"
         android:layout_below="@+id/usr"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:layout_alignParentEnd="true" />
 
     <EditText
+        android:id="@+id/usr"
+        style="@style/Widget.AppCompat.EditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="User Name"
-        android:ems="10"
-        android:id="@+id/usr"
-        android:textAlignment="viewStart"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:editable="true"
-        style="@style/Widget.AppCompat.EditText" />
+        android:ems="10"
+        android:hint="User Name"
+        android:inputType="textPersonName"
+        android:textAlignment="viewStart" />
 
 
     <Button
@@ -69,10 +70,18 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:cropToPadding="true"
+        android:elevation="7dp"
+        android:scaleType="center"
+        android:scaleX="1.5"
+        android:scaleY="1.5"
+        android:src="@drawable/logo"
+        android:visibility="visible"
+        app:srcCompat="@drawable/logo"
         android:layout_below="@+id/title"
         android:layout_centerHorizontal="true"
-        android:adjustViewBounds="false"
-        android:scaleType="center"
-        android:visibility="visible"
-        app:srcCompat="@drawable/logo" />
+        android:layout_marginTop="18dp" />
+
+
 </RelativeLayout>
