--- a/app/src/main/res/layout/activity_dashboard_leader.xml
+++ b/app/src/main/res/layout/activity_dashboard_leader.xml
@@ -21,27 +21,27 @@
 
     <Button
         android:id="@+id/check"
-        android:layout_width="98dp"
-        android:layout_height="102dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="33dp"
         android:background="@drawable/check"
         android:clickable="true"
         android:scaleType="fitXY"
-        android:visibility="visible"
-        android:layout_marginEnd="33dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+        android:visibility="visible" />
 
     <Button
         android:id="@+id/cross"
-        android:layout_width="98dp"
-        android:layout_height="102dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="38dp"
         android:background="@drawable/cross"
         android:clickable="true"
         android:scaleType="fitXY"
-        android:visibility="visible"
-        android:layout_marginStart="38dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:visibility="visible" />
 
     <Button
         android:id="@+id/logobutton"
