--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,35 +12,53 @@
     tools:context="com.css.cssapp.MainActivity">
 
     <Button
-        android:text="LOGIN"
+        android:id="@+id/menuLoginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/menuLoginButton"
-        android:background="@android:color/holo_blue_dark"
-        android:layout_marginTop="126dp"
-        android:layout_below="@+id/BITELL"
+        android:background="@android:drawable/screen_background_light_transparent"
+        android:elevation="12dp"
+        android:text="LOGIN"
+        android:layout_marginBottom="42dp"
+        android:layout_above="@+id/registerButton"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:text="REGISTER"
+        android:id="@+id/logobutton"
+        android:layout_width="98dp"
+        android:layout_height="102dp"
+        android:background="@drawable/logo"
+        android:backgroundTint="@android:drawable/screen_background_dark_transparent"
+        android:clickable="false"
+        android:elevation="40dp"
+        android:scaleType="fitXY"
+        android:visibility="visible"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/registerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/registerButton"
-        android:background="@android:color/holo_blue_dark"
-        android:layout_marginTop="35dp"
-        android:layout_below="@+id/menuLoginButton"
+        android:background="@android:drawable/screen_background_light_transparent"
+        android:text="REGISTER"
+        android:layout_above="@+id/logobutton"
         android:layout_alignParentStart="true"
+        android:layout_marginBottom="51dp"
         android:layout_alignParentEnd="true" />
 
-    <TextView
-        android:id="@+id/BITELL"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Button
+        android:id="@+id/slogan"
+        android:layout_width="250dp"
+        android:layout_height="95dp"
+        android:background="@drawable/slogan"
+        android:clickable="false"
+        android:elevation="40dp"
+        android:scaleType="fitXY"
+        android:visibility="visible"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="83dp"
-        android:text="BITELL"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-        android:visibility="visible" />
+        android:layout_centerHorizontal="true" />
+
+
+
 </RelativeLayout>
