--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,12 +13,13 @@
 
     tools:context="com.css.cssapp.LoginActivity">
 
-    <ImageView
+    <Button
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/bitell"
+        android:background="@drawable/bitell"
         android:layout_alignParentTop="true"
+        android:clickable="false"
         android:layout_centerHorizontal="true" />
 
     <EditText
