--- a/app/src/main/res/layout/activity_dashboard_leader.xml
+++ b/app/src/main/res/layout/activity_dashboard_leader.xml
@@ -11,6 +11,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/background">
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="160dp"
+        android:layout_height="150dp"
+        android:background="@drawable/bitell"
+        android:clickable="false"
+        android:layout_alignBaseline="@+id/speechbutton"
+        android:layout_alignBottom="@+id/speechbutton"
+        android:layout_toEndOf="@+id/logobutton" />
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,13 +57,13 @@
         android:id="@+id/logobutton"
         android:layout_width="98dp"
         android:layout_height="102dp"
+        android:layout_alignParentTop="true"
         android:background="@drawable/logo"
-        android:backgroundTint="@android:color/black"
+        android:backgroundTint="@android:color/holo_blue_bright"
         android:clickable="true"
         android:elevation="40dp"
         android:scaleType="fitXY"
-        android:visibility="visible"
-        android:layout_alignParentTop="true" />
+        android:visibility="visible" />
 
     <Button
         android:id="@+id/speechbutton"
@@ -67,14 +77,5 @@
         android:visibility="visible"
         android:layout_below="@+id/appBarLayout4"
         android:layout_alignParentEnd="true" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/bitell"
-        android:layout_above="@+id/check"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="316dp" />
 
 </RelativeLayout>
