--- a/app/src/main/res/layout/content_chat_screen.xml
+++ b/app/src/main/res/layout/content_chat_screen.xml
@@ -1,11 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.css.cssapp.ChatScreen"
-    tools:showIn="@layout/activity_chat_screen">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/background">
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="160dp"
+        android:layout_height="150dp"
+        android:layout_alignBaseline="@+id/logobutton"
+        android:layout_alignBottom="@+id/logobutton"
+        android:layout_toStartOf="@+id/speechbutton"
+        android:background="@drawable/bitell"
+        android:clickable="false" />
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:id="@+id/appBarLayout4">
+
+    </android.support.design.widget.AppBarLayout>
+
+    <Button
+        android:id="@+id/logobutton"
+        android:layout_width="98dp"
+        android:layout_height="102dp"
+        android:background="@drawable/logo"
+        android:backgroundTint="@android:color/black"
+        android:clickable="true"
+        android:elevation="40dp"
+        android:scaleType="fitXY"
+        android:visibility="visible"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/speechbutton"
+        android:layout_width="98dp"
+        android:layout_height="102dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/appBarLayout4"
+        android:background="@drawable/speach"
+        android:backgroundTint="@android:color/holo_blue_bright"
+        android:clickable="true"
+        android:elevation="40dp"
+        android:scaleType="fitXY"
+        android:visibility="visible" />
+
+</RelativeLayout>
