--- a/app/src/main/res/layout/activity_dashboard_leader.xml
+++ b/app/src/main/res/layout/activity_dashboard_leader.xml
@@ -37,6 +37,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="33dp"
         android:background="@drawable/check"
+        android:backgroundTint="@android:color/holo_blue_light"
         android:clickable="true"
         android:scaleType="fitXY"
         android:visibility="visible" />
@@ -49,6 +50,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="38dp"
         android:background="@drawable/cross"
+        android:backgroundTint="@android:color/black"
         android:clickable="true"
         android:scaleType="fitXY"
         android:visibility="visible" />
