--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,30 +19,27 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bitell"
         android:layout_alignParentTop="true"
-<<<<<<< HEAD
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="42dp" />
-=======
+        android:layout_centerHorizontal="true" />
         android:clickable="false"
         android:layout_centerHorizontal="true" />
->>>>>>> 3c03f9bed4f4a74df1e7fd9f96de1a615bdbd830
+
 
     <EditText
         android:id="@+id/psd"
         style="@style/Widget.AppCompat.EditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/usr"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="59dp"
         android:editable="true"
         android:ems="10"
         android:hint="Password"
-<<<<<<< HEAD
+
         android:inputType="textPassword"
-        android:textAlignment="center" />
-=======
+        android:textAlignment="center"
+        android:layout_below="@+id/usr"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
         android:id="@+id/psd"
         android:textAlignment="viewStart"
         android:editable="true"
@@ -51,59 +48,54 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="16dp"
         android:layout_alignParentEnd="true" />
->>>>>>> 3c03f9bed4f4a74df1e7fd9f96de1a615bdbd830
+
 
     <EditText
         android:id="@+id/usr"
         style="@style/Widget.AppCompat.EditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-<<<<<<< HEAD
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-=======
->>>>>>> 3c03f9bed4f4a74df1e7fd9f96de1a615bdbd830
+
+
         android:editable="true"
         android:ems="10"
         android:hint="User Name"
         android:inputType="textPersonName"
-<<<<<<< HEAD
-        android:textAlignment="center" />
-=======
+
+        android:textAlignment="center"
+        android:layout_below="@+id/imageView2"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="64dp"
+        android:layout_alignParentEnd="true" />
+
         android:textAlignment="viewStart"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
->>>>>>> 3c03f9bed4f4a74df1e7fd9f96de1a615bdbd830
+
 
 
     <Button
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/psd"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="69dp"
+        android:layout_marginTop="57dp"
         android:background="@android:drawable/screen_background_light_transparent"
         android:text="LOGIN"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:layout_below="@+id/psd"
+        android:layout_centerHorizontal="true" />
 
-<<<<<<< HEAD
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/title"
         android:scaleType="centerCrop"
         android:src="@drawable/logo"
         app:srcCompat="@drawable/logo"
-        android:layout_above="@+id/psd"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="18dp" />
-=======
->>>>>>> 3c03f9bed4f4a74df1e7fd9f96de1a615bdbd830
+        android:layout_marginBottom="30dp"
+        android:layout_alignBottom="@+id/usr"
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
