--- a/app/src/main/res/layout/activity_dashboard_leader.xml
+++ b/app/src/main/res/layout/activity_dashboard_leader.xml
@@ -80,19 +80,15 @@
         android:layout_below="@+id/appBarLayout4"
         android:layout_alignParentEnd="true" />
 
-    <ImageSwitcher
-        android:id="@+id/imageswitcher"
-        android:layout_width="350dp"
-        android:layout_height="325dp"
-        android:layout_above="@+id/check"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="23dp" >
 
-        <TextSwitcher
-            android:id="@+id/textswitcher"
-            android:layout_width="match_parent"
-            android:layout_height="159dp"
-            android:visibility="visible" />
-    </ImageSwitcher>
+    <TextSwitcher
+        android:id="@+id/textswitcher"
+        android:layout_width="match_parent"
+        android:layout_height="159dp"
+        android:visibility="visible"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true">
+
+    </TextSwitcher>
 
 </RelativeLayout>
